--- a/views/travel_hotel.ejs
+++ b/views/travel_hotel.ejs
@@ -16,7 +16,7 @@
             <div class="center">
                 <h3 class="title">어디로 가시나요?</h3>
                 <div class="sub_popular_local">
-                    <p class="subtitle">최근 인기많은 지역</p>
+                    <p class="subtitle">최근 <span>인기</span>많은 지역</p>
                     <div class="local_list_wrap">
                         <!-- 나중에 반복문으로 만들어보기 -->
                         <a href="#">
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="theme_hotel">
-                    <p class="subtitle">다양한 분위기의 숙소</p>
+                    <p class="subtitle">다양한 <span>분위기</span>의 숙소</p>
                     <div class="theme_list_wrap">
                         <!-- 나중에 반복문으로 만들어보기 -->
                         <a href="#">
@@ -147,9 +147,9 @@
                             </div>
                             <div class="rank">
                                 <i class="fa-solid fa-star"></i><span>4성급</span>
-                                <p class="hotel_title">[제주] 유탑 유블레스호텔</p>
-                                <p class="price">최저가 <span>128,000</span></p>
                             </div>
+                            <p class="hotel_title">[제주] 유탑 유블레스호텔</p>
+                            <p class="price">최저가 <span>128,000</span> ~</p>
                         </div> 
                     </a>
                     <a href="#">
@@ -159,9 +159,9 @@
                             </div>
                             <div class="rank">
                                 <i class="fa-solid fa-star"></i><span>5성급</span>
-                                <p class="hotel_title">[여수] 소노캄 여수</p>
-                                <p class="price">최저가 <span>128,000</span></p>
                             </div>
+                            <p class="hotel_title">[여수] 소노캄 여수</p>
+                            <p class="price">최저가 <span>128,000</span> ~</p>
                         </div>
                     </a>
                     <a href="#">
@@ -171,22 +171,86 @@
                             </div>
                             <div class="rank">
                                 <i class="fa-solid fa-star"></i><span>5성급</span>
-                                <p class="hotel_title">[여수] 소노캄 여수</p>
-                                <p class="price">최저가 <span>128,000</span></p>
                             </div>
+                            <p class="hotel_title">[여수] 소노캄 여수</p>
+                            <p class="price">최저가 <span>128,000</span> ~</p>
                         </div>
                     </a>
-                    <!-- <a href="#">
+                    <a href="#">
                         <div class="hotel_box">
-                            <img src="/img/sub_hotel02.jpg" alt="호텔 이미지입니다.">
+                            <div class="img_wrap">
+                                <img src="/img/sub_hotel02.jpg" alt="호텔 이미지입니다.">
+                            </div>
                             <div class="rank">
                                 <i class="fa-solid fa-star"></i><span>5성급</span>
-                                <p class="hotel_title">[여수] 소노캄 여수</p>
-                                <p class="price">최저가 <span>128,000</span></p>
                             </div>
+                            <p class="hotel_title">[여수] 소노캄 여수</p>
+                            <p class="price">최저가 <span>128,000</span> ~</p>
                         </div>
-                    </a> -->
+                    </a>
+                    <a href="#">
+                        <div class="hotel_box">
+                            <div class="img_wrap">
+                                <img src="/img/sub_hotel02.jpg" alt="호텔 이미지입니다.">
+                            </div>
+                            <div class="rank">
+                                <i class="fa-solid fa-star"></i><span>5성급</span>
+                            </div>
+                            <p class="hotel_title">[여수] 소노캄 여수</p>
+                            <p class="price">최저가 <span>128,000</span> ~</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="hotel_box">
+                            <div class="img_wrap">
+                                <img src="/img/sub_hotel02.jpg" alt="호텔 이미지입니다.">
+                            </div>
+                            <div class="rank">
+                                <i class="fa-solid fa-star"></i><span>5성급</span>
+                            </div>
+                            <p class="hotel_title">[여수] 소노캄 여수</p>
+                            <p class="price">최저가 <span>128,000</span> ~</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="hotel_box">
+                            <div class="img_wrap">
+                                <img src="/img/sub_hotel02.jpg" alt="호텔 이미지입니다.">
+                            </div>
+                            <div class="rank">
+                                <i class="fa-solid fa-star"></i><span>5성급</span>
+                            </div>
+                            <p class="hotel_title">[여수] 소노캄 여수</p>
+                            <p class="price">최저가 <span>128,000</span> ~</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="hotel_box">
+                            <div class="img_wrap">
+                                <img src="/img/sub_hotel02.jpg" alt="호텔 이미지입니다.">
+                            </div>
+                            <div class="rank">
+                                <i class="fa-solid fa-star"></i><span>5성급</span>
+                            </div>
+                            <p class="hotel_title">[여수] 소노캄 여수</p>
+                            <p class="price">최저가 <span>128,000</span> ~</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="hotel_box">
+                            <div class="img_wrap">
+                                <img src="/img/sub_hotel02.jpg" alt="호텔 이미지입니다.">
+                            </div>
+                            <div class="rank">
+                                <i class="fa-solid fa-star"></i><span>5성급</span>
+                            </div>
+                            <p class="hotel_title">[여수] 소노캄 여수</p>
+                            <p class="price">최저가 <span>128,000</span> ~</p>
+                        </div>
+                    </a>
+                    
                 </div>
+                <a class="more_btn" href="">더보기<i class="fa-solid fa-plus"></i></a>
             </div>
         </div>
     </div>
