--- a/html/css/style.css
+++ b/html/css/style.css
@@ -223,7 +223,7 @@ body::-webkit-scrollbar-track {
 #container .slide .view .slide_box .text_box .slide_btn {
   width: 120px;
   line-height: 50px;
-  background-color: #79e0ff;
+  background-color: #1ab3e1;
   margin: 0 auto;
   border-radius: 10px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
@@ -272,8 +272,9 @@ body::-webkit-scrollbar-track {
 #container .popular_local {
   display: flex;
   justify-content: center;
-  padding-top: 120px;
+  padding: 120px 0 76px;
   overflow: hidden;
+  background-color: #aaa;
 }
 #container .popular_local .center {
   width: 70%;
@@ -369,17 +370,12 @@ body::-webkit-scrollbar-track {
 #container .popular_local .center .local_wrap .mg {
   margin-bottom: 2%;
 }
-#container .section.on .center .local_wrap .local_box:nth-child(1), #container .section.on .center .local_wrap .local_box:nth-child(3) {
-  transform: translateX(0);
-}
-#container .section.on .center .local_wrap .local_box:nth-child(2), #container .section.on .center .local_wrap .local_box:nth-child(4), #container .section.on .center .local_wrap .local_box:nth-child(5) {
-  transform: translateY(0);
-}
 #container .local_video {
   display: flex;
   justify-content: center;
-  padding: 100px 0 150px;
-  margin: 180px 0;
+  padding: 150px 0 200px;
+  overflow: hidden;
+  background: #bbb;
 }
 #container .local_video .center {
   width: 100%;
@@ -401,9 +397,11 @@ body::-webkit-scrollbar-track {
 #container .local_video .center .context_wrap > div {
   width: 50%;
   margin: 0 30px;
+  transition: all 0.5s;
 }
 #container .local_video .center .context_wrap .left {
   height: 500px;
+  transform: translateX(-200%);
 }
 #container .local_video .center .context_wrap .left video {
   width: 100%;
@@ -411,6 +409,7 @@ body::-webkit-scrollbar-track {
 }
 #container .local_video .center .context_wrap .right {
   height: 500px;
+  transform: translateX(200%);
 }
 #container .local_video .center .context_wrap .right .box_list {
   height: 23%;
@@ -449,9 +448,9 @@ body::-webkit-scrollbar-track {
 #container .tour_bus {
   display: flex;
   justify-content: center;
-  padding: 100px 0 200px;
-  margin-bottom: 400px;
+  padding: 150px 0 325px;
   background-color: #edf6ff;
+  overflow: hidden;
 }
 #container .tour_bus .center {
   width: 70%;
@@ -469,6 +468,8 @@ body::-webkit-scrollbar-track {
 #container .tour_bus .center .bus_wrap {
   display: flex;
   justify-content: space-between;
+  transform: translateY(-205%);
+  transition: all 0.5s;
 }
 #container .tour_bus .center .bus_wrap .bus_box {
   width: 23%;
@@ -522,7 +523,8 @@ body::-webkit-scrollbar-track {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  margin-bottom: 300px;
+  margin: 200px 0 250px;
+  background-color: #ccc;
 }
 #container .local_count .center {
   width: 57%;
@@ -565,7 +567,9 @@ body::-webkit-scrollbar-track {
 #container .package {
   display: flex;
   justify-content: center;
-  margin-bottom: 300px;
+  padding: 150px 0 193px;
+  overflow: hidden;
+  background-color: #ddd;
 }
 #container .package .center {
   width: 57%;
@@ -585,6 +589,9 @@ body::-webkit-scrollbar-track {
   display: flex;
   position: relative;
 }
+#container .package .center .package_wrap > div {
+  transition: all 0.5s;
+}
 #container .package .center .package_wrap .left {
   width: 40%;
   height: 450px;
@@ -593,6 +600,7 @@ body::-webkit-scrollbar-track {
   background-size: cover;
   padding: 87px 0 0 20px;
   border-radius: 10px;
+  transform: translateX(-200%);
 }
 #container .package .center .package_wrap .left .big_text {
   font-size: 30px;
@@ -620,7 +628,7 @@ body::-webkit-scrollbar-track {
   width: 100%;
   position: absolute;
   left: 343px;
-  top: 25%;
+  top: 200%;
 }
 #container .package .center .package_wrap .right .local {
   position: absolute;
@@ -676,9 +684,35 @@ body::-webkit-scrollbar-track {
 #container .package .center .package_wrap .right .local.on {
   opacity: 1;
 }
+#container .comp_map {
+  padding: 150px 0 180px;
+  background-color: #eee;
+}
+#container .comp_map .title {
+  text-align: center;
+  margin-bottom: 50px;
+}
 #container .comp_map #map {
   width: 100%;
   height: 500px;
+}
+#container .section.on .center .local_wrap .local_box:nth-child(1), #container .section.on .center .local_wrap .local_box:nth-child(3) {
+  transform: translateX(0);
+}
+#container .section.on .center .local_wrap .local_box:nth-child(2), #container .section.on .center .local_wrap .local_box:nth-child(4), #container .section.on .center .local_wrap .local_box:nth-child(5) {
+  transform: translateY(0);
+}
+#container .section.on .center .context_wrap > div {
+  transform: translate(0);
+}
+#container .section.on .center .bus_wrap {
+  transform: translate(0);
+}
+#container .section.on .center .package_wrap .left {
+  transform: translate(0);
+}
+#container .section.on .center .package_wrap .right {
+  top: 25%;
 }
 #container .banner {
   background-color: orchid;
@@ -861,7 +895,6 @@ body::-webkit-scrollbar-track {
 #container .detail_page .center .detail_wrap .context .user_img {
   margin: 50px auto 40px;
   width: 100%;
-  height: 600px;
 }
 #container .detail_page .center .detail_wrap .context .user_img img {
   width: 100%;
@@ -1056,6 +1089,9 @@ body::-webkit-scrollbar-track {
 #container .where .center .sub_popular_local .subtitle, #container .where .center .theme_hotel .subtitle {
   text-align: center;
 }
+#container .where .center .sub_popular_local .subtitle span, #container .where .center .theme_hotel .subtitle span {
+  color: #00d3ff;
+}
 #container .where .center .sub_popular_local .local_list_wrap, #container .where .center .sub_popular_local .theme_list_wrap, #container .where .center .theme_hotel .local_list_wrap, #container .where .center .theme_hotel .theme_list_wrap {
   width: 100%;
   display: flex;
@@ -1152,15 +1188,32 @@ body::-webkit-scrollbar-track {
   align-items: center;
   flex-wrap: wrap;
 }
-#container .many_hotel .center .hotel_box_wrap .hotel_box {
+#container .many_hotel .center .hotel_box_wrap a {
   width: 31.333%;
   margin: 1%;
-  height: 300px;
-  display: block;
+  color: #000;
 }
-#container .many_hotel .center .hotel_box_wrap .hotel_box img {
+#container .many_hotel .center .hotel_box_wrap a .hotel_box .img_wrap {
+  width: 100%;
+  height: 267px;
+  margin-bottom: 12px;
+}
+#container .many_hotel .center .hotel_box_wrap a .hotel_box .img_wrap img {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
+}
+#container .many_hotel .center .hotel_box_wrap a .hotel_box .rank {
+  margin-bottom: 5px;
+}
+#container .many_hotel .center .hotel_box_wrap a .hotel_box .rank i {
+  color: #ffe600;
+  margin-right: 5px;
+}
+#container .many_hotel .center .hotel_box_wrap a .hotel_box .hotel_title {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 
 #go_top {
