--- a/html/scss/_layout.scss
+++ b/html/scss/_layout.scss
@@ -9,8 +9,6 @@
         align-items: center; width: 57%;
     }
     .h_top {
-        // background-color: #56d5e8;
-        // background-color: #00d3ff;
         background-color: #368aff;
         .sns {
             display: flex;
@@ -59,12 +57,11 @@
         .gnb {
             display: flex;
             > li {
-                width: 90px; text-align: center;
-                line-height: 70px; margin-left: 40px;
+                // width: 90px;
+                text-align: center;
+                line-height: 70px; margin-left: 60px;
                 position: relative;
                 > a {
-                    // color: #131313;
-                    // color: #227da1;
                     color: #006c97;
                     font-size: 18px;
                 }
@@ -90,10 +87,112 @@
         }
         .mobile_menu {
             display: none;
+            cursor: pointer;
             .bar {
-                width: 30px; height: 2px;
+                width: 30px; height: 3px;
                 margin: 4px 0; border-radius: 3px;
-                background-color: #000;
+                background-color: #006c97;
+                transition: all 0.5s;
+            }
+        }
+        .mobile_menu.on {
+            .bar {
+                &:nth-child(1),
+                &:nth-child(3) {
+                    position: relative;
+                }
+                &:nth-child(1) {
+                    transform:rotate(45deg);
+                    top: 7px;
+                }
+                &:nth-child(2) {
+                    transform: translateX(30px);
+                    opacity: 0;
+                }
+                &:nth-child(3) {
+                    transform:rotate(-45deg);
+                    bottom: 7px;
+                }
+            }
+        }
+    }
+    // 모바일 메뉴판
+    .mobile_board {
+        position: absolute;
+        top: 0;
+        // right: 0;
+        right: -100%;
+        width: 500px;
+        height: 100vh;
+        padding: 20px 35px;
+        
+        box-sizing: border-box;
+        z-index: 100;
+        transition: all 0.5s;
+        background-color: rgb(255, 223, 223);
+        .btn_wrap {
+            display: flex; justify-content: flex-end;
+            margin: 35px 0;
+            .board_btn{
+                text-align: right;
+                cursor: pointer;
+                .bar {
+                    width: 30px; height: 3px;
+                    margin: 4px 0; border-radius: 3px;
+                    background-color: #006c97;
+                    transition: all 0.5s;
+                    &:nth-child(1),
+                    &:nth-child(3) {
+                        position: relative;
+                    }
+                    &:nth-child(1) {
+                        transform:rotate(45deg);
+                        top: 7px;
+                    }
+                    &:nth-child(2) {
+                        transform: translateX(30px);
+                        opacity: 0;
+                    }
+                    &:nth-child(3) {
+                        transform:rotate(-45deg);
+                        bottom: 7px;
+                    }
+                }
+            }
+        }
+        .m_top {
+            display: flex; justify-content: space-between;
+            align-items: center; font-weight: 600;
+            font-size: 21px;
+            margin-bottom: 80px;
+            .m_login {
+                display: flex;
+                > li {
+                    margin-right: 22px;
+                    a {color: #313131;}
+                }
+            }
+            .t_right {
+                color: #313131;
+            }
+        }
+        .m_gnb_menu {
+            > li {
+                font-size: 25px;
+                margin-bottom: 20px;
+                > a {color: #313131;}
+                .m_sub_menu {
+                    font-size: 19px;
+                    padding: 10px 0;
+                    li {
+                        background-color: skyblue;
+                        // line-height: 28px;
+                        transition: all 0.5s;
+                        height: 0;
+                        overflow: hidden;
+                        > a {color: #313131;}
+                    }
+                }
             }
         }
     }
@@ -343,6 +442,7 @@
                 transition: all 0.5s;
                 .bus_box {
                     width: 23%;
+                    margin: 2%;
                     background-color: #fff;
                     border: 1px solid #cbcbcb;
                     border-radius: 10px;
@@ -488,11 +588,12 @@
                                 }
                                 .package_info {
                                     padding: 10px;
-                                    border: 1px solid #cbcbcb;
+                                    // border: 1px solid #cbcbcb;
                                     border-radius: 0 0 10px 10px;
                                     .tour_title {
                                         margin-top: 2px; font-size: 18px;
                                         font-weight: 600;
+                                        line-height: 22px;
                                     }
                                     .hash_tag {
                                         margin-top: 7px; font-size: 15px;
@@ -590,9 +691,9 @@
             }
         }
     }
-    // .banner.detail {
-    //     // .center {background-color: palegreen;}
-    // }
+    .banner.detail {
+        // .center {background-color: palegreen;}
+    }
     //목록페이지
     .travel_list {
         display: flex; justify-content: center;
@@ -848,22 +949,27 @@
     // 호텔페이지 where 영역
     .where {
         display: flex; justify-content: center;
-        margin-bottom: 150px;
+        padding: 120px 0 150px;
+
+        background-color: #aaa;
         .center {
             width: 57%;
             .title {
-                text-align: center; margin: 30px 0;
+                text-align: center; margin-bottom: 40px;
+                font-size: 27px;
             }
             .sub_popular_local,.theme_hotel {
                 .subtitle {
                     text-align: center;
+                    margin-bottom: 38px;
+                    font-size: 18px;
                     span {color: #00d3ff;}
                 }
                 .local_list_wrap,.theme_list_wrap {
                     width: 100%;
                     display: flex; justify-content: space-between;
                     align-items: center;
-                    margin: 15px 0 20px;
+                    margin-bottom: 45px;
                     > a {
                         width: 24%;
                         .local_list,.theme_list {
@@ -895,10 +1001,10 @@
             .btn_wrap {
                 display: flex; justify-content: center;
                 .hotel_more {
-                    background-color: skyblue;
+                    background-color: #00d3ff;
                     display: block; padding: 10px 20px;
-                    border-radius: 10px; color: #000000;
-                    font-size: 14px;
+                    border-radius: 10px;
+                    font-size: 14px; color: #341300;
                     i {margin-left: 7px;}
                 }
             }
@@ -924,6 +1030,9 @@
     // 호텔페이지 many_hotel 영역
     .many_hotel {
         display: flex; justify-content: center;
+        padding: 100px 0 120px;
+
+        background-color: rgb(221, 221, 221);
         .center {
             width: 57%;
             .text_box {
@@ -942,6 +1051,10 @@
                 a {
                     width: 31.333%; margin: 1%;
                     color: #000;
+                    display: none;
+                    &:nth-child(1),&:nth-child(2),&:nth-child(3) {
+                        display: flex;
+                    }
                     .hotel_box {
                         .img_wrap {
                             width: 100%; height: 267px;
@@ -959,6 +1072,42 @@
                             font-size: 18px; font-weight: 600;
                             margin-bottom: 10px;
                         }
+                        .price {
+                            padding-bottom: 25px;
+                            span {font-size: 20px; font-weight: 600;}
+                        }
+                    }
+                }
+            }
+            .more_btn {
+                width: 180px; line-height: 38px;
+                background-color: #00d3ff;
+                display: block;
+                text-align: center;
+                margin: 10px auto 0;
+                border-radius: 10px;
+                color: #341300;
+            }
+        }
+    }
+    // 호텔페이지 notice 영역
+    .notice {
+        display: flex; justify-content: center;
+        background-color: #1898c5;
+        padding: 100px 0;
+        .center {
+            width: 70%;
+            .notice_wrap {
+                display: flex; justify-content: space-between;
+                .notice_box {
+                    text-align: center;
+                    color: #fff;
+                    span {
+                        font-size: 120px;
+                        margin-bottom: 20px;
+                    }
+                    p {
+                        font-size: 30px; font-weight: 600;
                     }
                 }
             }
