--- a/html/scss/_reset.scss
+++ b/html/scss/_reset.scss
@@ -7,6 +7,7 @@ input,select,textarea {outline: 0;}
 textarea {resize: none;}
 body {
     line-height: 1;
+    overflow-x: hidden;
     font-family: 'Noto Sans', sans-serif;
     font-family: 'Noto Sans KR', sans-serif;
     // 스크롤바
